# pogo-storage-mapper

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  LICENSE  PLAN.md  README.md  pyproject.toml  tests.txt
.github/linters/: .mypy.ini  .python-lint  .ruff.toml
.github/workflows/: polish-the-code.yml
docs/: export-performance-notes.md  pipeline.md
src/pogo_storage_mapper/: __init__.py  __main__.py  classify.py  cli.py  doctor.py  export.py  extract.py  layout.py  metadata.py  metadata_sync.py  ocr.py  runtime_support.py  scan_frames.py  species_sync.py
src/pogo_storage_mapper/data/: metadata_catalog.json  possible_legacy_elite_moves.csv
tests/: conftest.py  test_classify.py  test_cli.py  test_export.py  test_extract.py  test_metadata.py  test_runtime_support.py  test_scan_frames.py
tests/fixtures/iaast_scan_fresh/: expected_labels.json
